# mao-na-massa-delivery

./: .env.example  .gitignore  README.md  docker-compose.yml  mao-na-massa-delivery-threat-model.md  security_best_practices_report.md
.github/workflows/: qa.yml
backend/: .env.example  Dockerfile.e2e  mao-na-massa.db-shm  mao-na-massa.db-wal  pyproject.toml  railway.json  sonar-project.properties
backend/alembic/: env.py
backend/alembic/versions/: 011f705b6fee_listas_salvas.py  b8b261b0edfe_initial_schema.py  c44e738c0089_movimentacoes_estoque.py  e3f0fd0b1858_controle_estoque.py  f4a8f8ce1c29_lista_compras.py  fc6c499ff808_kanban_pedidos.py  fc6c499ff808_notificacoes.py
backend/app/: __init__.py  auth.py  config.py  database.py  errors.py  main.py
backend/app/models/: __init__.py  ingrediente.py  item_pedido.py  lista_compras.py  movimentacao_estoque.py  notificacao.py  pedido.py  produto.py  receita_item.py  site_config.py  status_history.py  testimonial.py  variacao.py
backend/app/routers/: __init__.py  admin_auth.py  admin_site_config.py  admin_testimonials.py  calculadora.py  dashboard.py  ingredientes.py  lista_compras.py  notificacoes.py  pedidos.py  produtos.py  publico.py  publico_site_config.py  publico_testimonials.py  variacoes.py
backend/app/schemas/: dashboard.py  ingrediente.py  lista_compras.py  movimentacao.py  notificacao.py  pedido.py  produto.py  receita.py  site_config.py  testimonial.py  variacao.py
backend/app/services/: notificador.py
backend/scripts/: backup_db.py  qa.sh  seed_e2e.py  seed_site_config.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_cms.py
design-system/mão-na-massa/: MASTER.md
docs/: architecture.md  briefing.md  postgresql-migration.md  ui-ux-analysis.md
docs/plans/: 2026-06-21-fase1-backend-setup.md  2026-06-27-fase5-relatorios.md  2026-06-27-formacao-preco.md  2026-07-01-kanban-pedidos.md
frontend/: .env.example  index.html  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  railway.json  vite.config.ts
frontend/coverage/: index.html  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/src/: App.tsx.html  index.html
frontend/e2e/: app.spec.ts  kanban.spec.ts
frontend/src/: App.tsx  index.css  sw.ts
frontend/src/api/: client.ts
frontend/src/components/: AsyncWrapper.tsx  AutocompleteIngrediente.tsx  AutocompleteInput.tsx  AutocompleteProduto.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  EstoqueChart.tsx  KanbanBoard.tsx  KanbanCard.tsx  Layout.tsx  MensalChart.tsx  ModalMotivo.tsx  NotificationBell.tsx  OnlineStatus.tsx  PageHeader.tsx  PageTransition.tsx  ProtectedRoute.tsx  PwaInstallPrompt.tsx  StatusHistoryTimeline.tsx  SyncStatus.tsx  ThemeToggle.tsx  Toast.tsx  TopProdutos.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: CalculadoraPreco.tsx  Dashboard.tsx  Ingredientes.tsx  Landing.tsx  ListaCompras.tsx  Login.tsx  PedidoDetalhe.tsx  PedidoNovo.tsx  Pedidos.tsx  Produtos.tsx  PublicTracking.tsx
frontend/src/services/: db.ts  mutationQueue.ts  offlineClient.ts
frontend/src/test/: setup.ts
frontend/src/utils/: csv.ts  (+3 more)
ownership-map-out/: cochange.graph.json  cochange_edges.csv  commits.jsonl  communities.json  edges.csv  files.csv  people.csv  summary.json
(+119 files in other folders)
