[project]
name = "mao-na-massa"
version = "0.1.0"
description = "Mão na Massa - Gestão de produção e vendas de salgados e doces"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.1",
    "slowapi>=0.1.10",
    "pyjwt>=2.13.0",
]

[project.scripts]
mao-na-massa = "app.main:start"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "bandit[toml]>=1.9.4",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "pylint>=4.0.6",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.15.20",
]

# ─── Ruff: linter + formatter + isort ──────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",     # line-too-long — formatter handles this
    "B904",     # raise-within-try — opt-in for our patterns
    "B008",     # Function call in default args — False positive for FastAPI Depends()
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]  # Allow snake_case in test names
"alembic/versions/*" = ["N802", "N803", "I001"]
"app/models/*" = ["F821"]             # Forward references in SQLAlchemy Mapped types

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Bandit: security scanner ─────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic"]
skips = ["B101"]  # Allow assert statements in tests

# ─── Pylint: deep semantic analysis ──────────────────────────────
[tool.pylint.main]
ignore = ["tests", "alembic", ".venv"]
py-version = "3.12"

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "invalid-name",
    "line-too-long",
    "import-error",
    "wrong-import-order",
    "duplicate-code",
    "fixme",
]

[tool.pylint.reports]
output-format = "colorized"
score = false
